<resources>
    <string name="app_name">My Tasks</string>

    <!-- Generics -->
    <string name="empty_string"> </string>
    <string name="generic_error">Ocorreu um erro. Por favor, tente novamente mais tarde!</string>
    <string name="generic_error_description">Informe uma descrição para a tarefa.</string>
    <string name="generic_salve_task_error">Erro ao salvar a tarefa.</string>
    <string name="generic_salve_task_success">Tarefa salva com sucesso!</string>
    <string name="generic_att_task_success">Tarefa atualizada com sucesso!</string>
    <string name="generic_description">Este texto serve como exemplo</string>

    <!-- App Authorization -->
    <string name="app_text_sign_in">Vamos começar ?</string>
    <string name="app_text_welcome">Oi! Bem-vindo de volta, você fez falta</string>
    <string name="app_email">E-mail</string>
    <string name="app_password">Senha</string>
    <string name="app_email_example">exemplo@gmail.com</string>
    <string name="app_password_example">**********</string>
    <string name="app_login">Entrar</string>
    <string name="app_login_alternative">Ou entre com</string>
    <string name="app_no_account">Você não tem cadastro ?</string>
    <string name="app_create_account">Criar Conta</string>
    <string name="app_information_create_account">Vamos preencher os dados básicos da sua conta</string>
    <string name="app_nome_account">Nome</string>
    <string name="app_nome_account_example">Informe seu nome</string>
    <string name="app_recover_account">Esqueci minha senha</string>
    <string name="app_text_recover_account">Recuperar Conta</string>
    <string name="app_information_recover_account">Insira o seu endereço de e-mail para recuperar sua conta</string>
    <string name="app_send">Enviar</string>
    <string name="app_message_email">Informe seu e-mail.</string>
    <string name="app_message_password">Informe sua senha.</string>
    <string name="app_message_recover">Pronto, acabamos de enviar um link para seu e-mail.</string>
    <string name="app_toast_create">Conta criada com sucesso!</string>

    <!-- Screen Home -->
    <string name="home_loading_info">Carregando tarefas…</string>
    <string name="home_txt_btn_remove">Remover</string>
    <string name="home_txt_btn_edit">Editar</string>
    <string name="home_txt_btn_details">Detalhes</string>
    <string name="home_empty_task">Nenhuma tarefa cadastrada.</string>
    <string name="home_error_list_task">Erro ao listar tarefa.</string>

    <!-- Error Firebase Authentication -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <string name="google_error_login">Erro ao tentar fazer login com a conta do Google</string>
    <string name="google_login_cancelled">Login cancelado</string>

    <!-- Form Task -->
    <string name="form_task_txt_title_new">Nova tarefa</string>
    <string name="form_task_txt_title_edit">Editar tarefa</string>
    <string name="form_task_text_description">Descrição</string>
    <string name="form_task_text_status">Status</string>
    <string name="form_task_hint_task">Criar nova tela de login</string>
    <string name="form_task_btn_save">Salvar</string>
    <string name="form_task_todo">A Fazer</string>
    <string name="form_task_doing">Fazendo</string>
    <string name="form_task_done">Feitas</string>
    <string name="form_task">task</string>

    <!--    Sheet Dialog-->
    <string name="sheet_dialog_text_title_warning">Atenção</string>
    <string name="sheet_dialog_text_button_warning">Entendi</string>

</resources>