<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16dp"
    android:layout_marginVertical="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp"
    app:cardElevation="@dimen/_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/generic_description" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_task"
            android:backgroundTint="@color/mr_color_delete"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/_4dp"
            android:text="@string/home_txt_btn_remove"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_edit" />

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginVertical="@dimen/_24dp"
            android:background="@drawable/bg_task"
            android:backgroundTint="@color/mr_color_edit"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/_4dp"
            android:text="@string/home_txt_btn_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_delete"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/btn_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_task"
            android:backgroundTint="@color/mr_color_details"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="@dimen/_4dp"
            android:text="@string/home_txt_btn_details"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_edit"
            app:layout_constraintTop_toTopOf="@+id/btn_edit" />

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_edit"
            tools:tint="@color/mr_color_primary" />

        <ImageButton
            android:id="@+id/img_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_edit"
            tools:tint="@color/mr_color_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>